--- a/.github/workflows/java-ci-01.yml
+++ b/.github/workflows/java-ci-01.yml
@@ -14,3 +14,23 @@
             distribution: 'adopt'
         - name: Build with Maven
           run: mvn --batch-mode --update-snapshots package
+          
+          # Docker Run: docker login -u mpoettler
+        - name: Login to Docker Hub
+          uses: docker/login-action@v2
+          with:
+            username: ${{ secrets.mpoettler }}
+            password: ${{ secrets.dckr_pat_WdLzNaX0HdafbQ0JjKfSgDtZER4 }}
+            
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v2
+          
+        - name: Build and push to public repository
+          uses: docker/build-push-action@v3
+          with:
+            context: .
+            file: ./Dockerfile
+            push: true
+            tags: ${{ secrets.mpoettler }}/democalc_public:latest
+          
+          
